2011-05-05 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6.1

  * Bug en cobro de venta (selección de impresión de ticket)
  * Impresión de etiquetas de productos
  * Ajustes de presentacion de formulario

2011-05-05 Santiago Ramos <sramos@sitiodistinto.net> Version 0.6

  * Bug en creacion de tabla de sesiones para instalaciones nuevas
  * Facturas de otros gastos
  * Entradas/salidas de caja
  * Arqueo y cierre de caja
  * Libro diario
  * Resumen de posicion global
  * Checkbox de imprimir factura
  * Campo ISBN por defecto para nueva linea de albaran
  * Credito acumulado por cliente (provision manual con generacion
    de entrada salida de caja, pero no de factura ni pago)
  * % de retorno por familia (configuracion)
  * Inclusion de direccion y codigo postal en cliente
  * Impresion de facturas de clientes
  * Inclusion de codigo postal y telefono en config general y uso
    en las facturas de clientes

2011-04-09 Santiago Ramos <sramos@sitiodistinto.net> Version 0.5

  * Controlador de Proveedores movido a seccion Productos
  * Controlador de Clientes movido a seccion TPV
  * Version de la app en la pagina web
  * Adaptaciones para empaquetado debian
  * Correccion de bug en borrado de facturas
  * Parametros de configuracion de la tienda en seccion Admin
  * Unificacion de metodos de calculo de precio bruto y
    precio con iva

2011-04-01 Santiago Ramos <sramos@sitiodistinto.net> Version 0.4

  * Cambios en tamaño de caracteres por campo para listados
  * Ventas por producto
  * Retoques en borrado de pagos de facturas
  * Las facturas se pueden borrar (convertir de nuevo en 
    albaranes abiertos) cuando no tienen pagos realizados.
  * Borrado de líneas de albaran cuando se borra un albaran
  * Información de cobro y cambio a devolver tras venta
  * Paginado de facturas y productos
  * Busqueda por titulo, autor, cantidad, codigo, editor y
    familia. La búsqueda se guarda en la sesión
  * Lineas de albaran contiene nombre del producto, iva y