@@ -18,7 +18,7 @@
     <div class="listado_derecha">
       <%= link_to_remote icono((params[:seccion] == 'productos')?'Cart2':'Cart',{:title => "Ver Productos"}), :url => { :controller => 'albaran_lineas', :action => 'lineas', :albaran_id => objeto.id, :update => "albaran_sub_" + i.to_s } %>
       <%= link_to icono('Write',{:title => "Editar"}), :action => :editar, :id => objeto %>
-      <%= borrado icono('Trash',{:title => 'Borrar'}), { :action => 'borrar', :id => objeto.id } , 'Eliminar Albaran', "Albaran Pendiente de " + ( params[:seccion] == "productos" ? objeto.proveedor.nombre : objeto.cliente.nombre ), :ajax => false %>
+      <%= borrado icono('Trash',{:title => 'Borrar'}), { :action => 'borrar', :id => objeto.id } , 'Eliminar Albaran', "Albaran Pendiente de " + ( objeto.cliente.nil? ? objeto.proveedor.nombre : objeto.cliente.nombre ), :ajax => false %>
     </div>
   </div>
   <div id="albaran_sub_<%= i.to_s %>">
